<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Poke151</string>
	<string name="POKE001">フシギダネ</string>
	<string name="POKE002">フシギソウ</string>
	<string name="POKE003">フシギバナ</string>
	<string name="POKE004">ヒトカゲ</string>
	<string name="POKE005">リザード</string>
	<string name="POKE006">リザードン</string>
	<string name="POKE007">ゼニガメ</string>
	<string name="POKE008">カメール</string>
	<string name="POKE009">カメックス</string>
	<string name="POKE010">キャタピー</string>
	<string name="POKE011">トランセル</string>
	<string name="POKE012">バタフリー</string>
	<string name="POKE013">ビードル</string>
	<string name="POKE014">コクーン</string>
	<string name="POKE015">スピアー</string>
	<string name="POKE016">ポッポ</string>
	<string name="POKE017">ピジョン</string>
	<string name="POKE018">ピジョット</string>
	<string name="POKE019">コラッタ</string>
	<string name="POKE020">ラッタ</string>
	<string name="POKE021">オニスズメ</string>
	<string name="POKE022">オニドリル</string>
	<string name="POKE023">アーボ</string>
	<string name="POKE024">アーボック</string>
	<string name="POKE025">ピカチュウ</string>
	<string name="POKE026">ライチュウ</string>
	<string name="POKE027">サンド</string>
	<string name="POKE028">サンドパン</string>
	<string name="POKE029">ニドラン♀</string>
	<string name="POKE030">ニドリーナ</string>
	<string name="POKE031">ニドクイン</string>
	<string name="POKE032">ニドラン♂</string>
	<string name="POKE033">ニドリーノ</string>
	<string name="POKE034">ニドキング</string>
	<string name="POKE035">ピッピ</string>
	<string name="POKE036">ピクシー</string>
	<string name="POKE037">ロコン</string>
	<string name="POKE038">キュウコン</string>
	<string name="POKE039">プリン</string>
	<string name="POKE040">プクリン</string>
	<string name="POKE041">ズバット</string>
	<string name="POKE042">ゴルバット</string>
	<string name="POKE043">ナゾノクサ</string>
	<string name="POKE044">クサイハナ</string>
	<string name="POKE045">ラフレシア</string>
	<string name="POKE046">パラス</string>
	<string name="POKE047">パラセクト</string>
	<string name="POKE048">コンパン</string>
	<string name="POKE049">モルフォン</string>
	<string name="POKE050">ディグダ</string>
	<string name="POKE051">ダグトリオ</string>
	<string name="POKE052">ニャース</string>
	<string name="POKE053">ペルシアン</string>
	<string name="POKE054">コダック</string>
	<string name="POKE055">ゴルダック</string>
	<string name="POKE056">マンキー</string>
	<string name="POKE057">オコリザル</string>
	<string name="POKE058">ガーディ</string>
	<string name="POKE059">ウインディ</string>
	<string name="POKE060">ニョロモ</string>
	<string name="POKE061">ニョロゾ</string>
	<string name="POKE062">ニョロボン</string>
	<string name="POKE063">ケーシィ</string>
	<string name="POKE064">ユンゲラー</string>
	<string name="POKE065">フーディン</string>
	<string name="POKE066">ワンリキー</string>
	<string name="POKE067">ゴーリキー</string>
	<string name="POKE068">カイリキー</string>
	<string name="POKE069">マダツボミ</string>
	<string name="POKE070">ウツドン</string>
	<string name="POKE071">ウツボット</string>
	<string name="POKE072">メノクラゲ</string>
	<string name="POKE073">ドククラゲ</string>
	<string name="POKE074">イシツブテ</string>
	<string name="POKE075">ゴローン</string>
	<string name="POKE076">ゴローニャ</string>
	<string name="POKE077">ポニータ</string>
	<string name="POKE078">ギャロップ</string>
	<string name="POKE079">ヤドン</string>
	<string name="POKE080">ヤドラン</string>
	<string name="POKE081">コイル</string>
	<string name="POKE082">レアコイル</string>
	<string name="POKE083">カモネギ</string>
	<string name="POKE084">ドードー</string>
	<string name="POKE085">ドードリオ</string>
	<string name="POKE086">パウワウ</string>
	<string name="POKE087">ジュゴン</string>
	<string name="POKE088">ベトベター</string>
	<string name="POKE089">ベトベトン</string>
	<string name="POKE090">シェルダー</string>
	<string name="POKE091">パルシェン</string>
	<string name="POKE092">ゴース</string>
	<string name="POKE093">ゴースト</string>
	<string name="POKE094">ゲンガー</string>
	<string name="POKE095">イワーク</string>
	<string name="POKE096">スリープ</string>
	<string name="POKE097">スリーパー</string>
	<string name="POKE098">クラブ</string>
	<string name="POKE099">キングラー</string>
	<string name="POKE100">ビリリダマ</string>
	<string name="POKE101">マルマイン</string>
	<string name="POKE102">タマタマ</string>
	<string name="POKE103">ナッシー</string>
	<string name="POKE104">カラカラ</string>
	<string name="POKE105">ガラガラ</string>
	<string name="POKE106">サワムラー</string>
	<string name="POKE107">エビワラー</string>
	<string name="POKE108">ベロリンガ</string>
	<string name="POKE109">ドガース</string>
	<string name="POKE110">マタドガス</string>
	<string name="POKE111">サイホーン</string>
	<string name="POKE112">サイドン</string>
	<string name="POKE113">ラッキー</string>
	<string name="POKE114">モンジャラ</string>
	<string name="POKE115">ガルーラ</string>
	<string name="POKE116">タッツー</string>
	<string name="POKE117">シードラ</string>
	<string name="POKE118">トサキント</string>
	<string name="POKE119">アズマオウ</string>
	<string name="POKE120">ヒトデマン</string>
	<string name="POKE121">スターミー</string>
	<string name="POKE122">バリヤード</string>
	<string name="POKE123">ストライク</string>
	<string name="POKE124">ルージュラ</string>
	<string name="POKE125">エレブー</string>
	<string name="POKE126">ブーバー</string>
	<string name="POKE127">カイロス</string>
	<string name="POKE128">ケンタロス</string>
	<string name="POKE129">コイキング</string>
	<string name="POKE130">ギャラドス</string>
	<string name="POKE131">ラプラス</string>
	<string name="POKE132">メタモン</string>
	<string name="POKE133">イーブイ</string>
	<string name="POKE134">シャワーズ</string>
	<string name="POKE135">サンダース</string>
	<string name="POKE136">ブースター</string>
	<string name="POKE137">ポリゴン</string>
	<string name="POKE138">オムナイト</string>
	<string name="POKE139">オムスター</string>
	<string name="POKE140">カブト</string>
	<string name="POKE141">カブトプス</string>
	<string name="POKE142">プテラ</string>
	<string name="POKE143">カビゴン</string>
	<string name="POKE144">フリーザー</string>
	<string name="POKE145">サンダー</string>
	<string name="POKE146">ファイヤー</string>
	<string name="POKE147">ミニリュウ</string>
	<string name="POKE148">ハクリュー</string>
	<string name="POKE149">カイリュー</string>
	<string name="POKE150">ミュウツー</string>
	<string name="POKE151">ミュウ</string>

</resources>
