<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
	<TableRow><TextView android:text="@string/POKE001"/></TableRow>
	<TableRow><TextView android:text="@string/POKE001"/></TableRow>
	<TableRow><TextView android:text="@string/POKE002"/></TableRow>
	<TableRow><TextView android:text="@string/POKE003"/></TableRow>
	<TableRow><TextView android:text="@string/POKE004"/></TableRow>
	<TableRow><TextView android:text="@string/POKE005"/></TableRow>
	<TableRow><TextView android:text="@string/POKE006"/></TableRow>
	<TableRow><TextView android:text="@string/POKE007"/></TableRow>
	<TableRow><TextView android:text="@string/POKE008"/></TableRow>
	<TableRow><TextView android:text="@string/POKE009"/></TableRow>
	<TableRow><TextView android:text="@string/POKE010"/></TableRow>
	<TableRow><TextView android:text="@string/POKE011"/></TableRow>
	<TableRow><TextView android:text="@string/POKE012"/></TableRow>
	<TableRow><TextView android:text="@string/POKE013"/></TableRow>
	<TableRow><TextView android:text="@string/POKE014"/></TableRow>
	<TableRow><TextView android:text="@string/POKE015"/></TableRow>
	<TableRow><TextView android:text="@string/POKE016"/></TableRow>
	<TableRow><TextView android:text="@string/POKE017"/></TableRow>
	<TableRow><TextView android:text="@string/POKE018"/></TableRow>
	<TableRow><TextView android:text="@string/POKE019"/></TableRow>
	<TableRow><TextView android:text="@string/POKE020"/></TableRow>
	<TableRow><TextView android:text="@string/POKE021"/></TableRow>
	<TableRow><TextView android:text="@string/POKE022"/></TableRow>
	<TableRow><TextView android:text="@string/POKE023"/></TableRow>
	<TableRow><TextView android:text="@string/POKE024"/></TableRow>
	<TableRow><TextView android:text="@string/POKE025"/></TableRow>
	<TableRow><TextView android:text="@string/POKE026"/></TableRow>
	<TableRow><TextView android:text="@string/POKE027"/></TableRow>
	<TableRow><TextView android:text="@string/POKE028"/></TableRow>
	<TableRow><TextView android:text="@string/POKE029"/></TableRow>
	<TableRow><TextView android:text="@string/POKE030"/></TableRow>
	<TableRow><TextView android:text="@string/POKE031"/></TableRow>
	<TableRow><TextView android:text="@string/POKE032"/></TableRow>
	<TableRow><TextView android:text="@string/POKE033"/></TableRow>
	<TableRow><TextView android:text="@string/POKE034"/></TableRow>
	<TableRow><TextView android:text="@string/POKE035"/></TableRow>
	<TableRow><TextView android:text="@string/POKE036"/></TableRow>
	<TableRow><TextView android:text="@string/POKE037"/></TableRow>
	<TableRow><TextView android:text="@string/POKE038"/></TableRow>
	<TableRow><TextView android:text="@string/POKE039"/></TableRow>
	<TableRow><TextView android:text="@string/POKE040"/></TableRow>
	<TableRow><TextView android:text="@string/POKE041"/></TableRow>
	<TableRow><TextView android:text="@string/POKE042"/></TableRow>
	<TableRow><TextView android:text="@string/POKE043"/></TableRow>
	<TableRow><TextView android:text="@string/POKE044"/></TableRow>
	<TableRow><TextView android:text="@string/POKE045"/></TableRow>
	<TableRow><TextView android:text="@string/POKE046"/></TableRow>
	<TableRow><TextView android:text="@string/POKE047"/></TableRow>
	<TableRow><TextView android:text="@string/POKE048"/></TableRow>
	<TableRow><TextView android:text="@string/POKE049"/></TableRow>
	<TableRow><TextView android:text="@string/POKE050"/></TableRow>
	<TableRow><TextView android:text="@string/POKE051"/></TableRow>
	<TableRow><TextView android:text="@string/POKE052"/></TableRow>
	<TableRow><TextView android:text="@string/POKE053"/></TableRow>
	<TableRow><TextView android:text="@string/POKE054"/></TableRow>
	<TableRow><TextView android:text="@string/POKE055"/></TableRow>
	<TableRow><TextView android:text="@string/POKE056"/></TableRow>
	<TableRow><TextView android:text="@string/POKE057"/></TableRow>
	<TableRow><TextView android:text="@string/POKE058"/></TableRow>
	<TableRow><TextView android:text="@string/POKE059"/></TableRow>
	<TableRow><TextView android:text="@string/POKE060"/></TableRow>
	<TableRow><TextView android:text="@string/POKE061"/></TableRow>
	<TableRow><TextView android:text="@string/POKE062"/></TableRow>
	<TableRow><TextView android:text="@string/POKE063"/></TableRow>
	<TableRow><TextView android:text="@string/POKE064"/></TableRow>
	<TableRow><TextView android:text="@string/POKE065"/></TableRow>
	<TableRow><TextView android:text="@string/POKE066"/></TableRow>
	<TableRow><TextView android:text="@string/POKE067"/></TableRow>
	<TableRow><TextView android:text="@string/POKE068"/></TableRow>
	<TableRow><TextView android:text="@string/POKE069"/></TableRow>
	<TableRow><TextView android:text="@string/POKE070"/></TableRow>
	<TableRow><TextView android:text="@string/POKE071"/></TableRow>
	<TableRow><TextView android:text="@string/POKE072"/></TableRow>
	<TableRow><TextView android:text="@string/POKE073"/></TableRow>
	<TableRow><TextView android:text="@string/POKE074"/></TableRow>
	<TableRow><TextView android:text="@string/POKE075"/></TableRow>
	<TableRow><TextView android:text="@string/POKE076"/></TableRow>
	<TableRow><TextView android:text="@string/POKE077"/></TableRow>
	<TableRow><TextView android:text="@string/POKE078"/></TableRow>
	<TableRow><TextView android:text="@string/POKE079"/></TableRow>
	<TableRow><TextView android:text="@string/POKE080"/></TableRow>
	<TableRow><TextView android:text="@string/POKE081"/></TableRow>
	<TableRow><TextView android:text="@string/POKE082"/></TableRow>
	<TableRow><TextView android:text="@string/POKE083"/></TableRow>
	<TableRow><TextView android:text="@string/POKE084"/></TableRow>
	<TableRow><TextView android:text="@string/POKE085"/></TableRow>
	<TableRow><TextView android:text="@string/POKE086"/></TableRow>
	<TableRow><TextView android:text="@string/POKE087"/></TableRow>
	<TableRow><TextView android:text="@string/POKE088"/></TableRow>
	<TableRow><TextView android:text="@string/POKE089"/></TableRow>
	<TableRow><TextView android:text="@string/POKE090"/></TableRow>
	<TableRow><TextView android:text="@string/POKE091"/></TableRow>
	<TableRow><TextView android:text="@string/POKE092"/></TableRow>
	<TableRow><TextView android:text="@string/POKE093"/></TableRow>
	<TableRow><TextView android:text="@string/POKE094"/></TableRow>
	<TableRow><TextView android:text="@string/POKE095"/></TableRow>
	<TableRow><TextView android:text="@string/POKE096"/></TableRow>
	<TableRow><TextView android:text="@string/POKE097"/></TableRow>
	<TableRow><TextView android:text="@string/POKE098"/></TableRow>
	<TableRow><TextView android:text="@string/POKE099"/></TableRow>
	<TableRow><TextView android:text="@string/POKE100"/></TableRow>
	<TableRow><TextView android:text="@string/POKE101"/></TableRow>
	<TableRow><TextView android:text="@string/POKE102"/></TableRow>
	<TableRow><TextView android:text="@string/POKE103"/></TableRow>
	<TableRow><TextView android:text="@string/POKE104"/></TableRow>
	<TableRow><TextView android:text="@string/POKE105"/></TableRow>
	<TableRow><TextView android:text="@string/POKE106"/></TableRow>
	<TableRow><TextView android:text="@string/POKE107"/></TableRow>
	<TableRow><TextView android:text="@string/POKE108"/></TableRow>
	<TableRow><TextView android:text="@string/POKE109"/></TableRow>
	<TableRow><TextView android:text="@string/POKE110"/></TableRow>
	<TableRow><TextView android:text="@string/POKE111"/></TableRow>
	<TableRow><TextView android:text="@string/POKE112"/></TableRow>
	<TableRow><TextView android:text="@string/POKE113"/></TableRow>
	<TableRow><TextView android:text="@string/POKE114"/></TableRow>
	<TableRow><TextView android:text="@string/POKE115"/></TableRow>
	<TableRow><TextView android:text="@string/POKE116"/></TableRow>
	<TableRow><TextView android:text="@string/POKE117"/></TableRow>
	<TableRow><TextView android:text="@string/POKE118"/></TableRow>
	<TableRow><TextView android:text="@string/POKE119"/></TableRow>
	<TableRow><TextView android:text="@string/POKE120"/></TableRow>
	<TableRow><TextView android:text="@string/POKE121"/></TableRow>
	<TableRow><TextView android:text="@string/POKE122"/></TableRow>
	<TableRow><TextView android:text="@string/POKE123"/></TableRow>
	<TableRow><TextView android:text="@string/POKE124"/></TableRow>
	<TableRow><TextView android:text="@string/POKE125"/></TableRow>
	<TableRow><TextView android:text="@string/POKE126"/></TableRow>
	<TableRow><TextView android:text="@string/POKE127"/></TableRow>
	<TableRow><TextView android:text="@string/POKE128"/></TableRow>
	<TableRow><TextView android:text="@string/POKE129"/></TableRow>
	<TableRow><TextView android:text="@string/POKE130"/></TableRow>
	<TableRow><TextView android:text="@string/POKE131"/></TableRow>
	<TableRow><TextView android:text="@string/POKE132"/></TableRow>
	<TableRow><TextView android:text="@string/POKE133"/></TableRow>
	<TableRow><TextView android:text="@string/POKE134"/></TableRow>
	<TableRow><TextView android:text="@string/POKE135"/></TableRow>
	<TableRow><TextView android:text="@string/POKE136"/></TableRow>
	<TableRow><TextView android:text="@string/POKE137"/></TableRow>
	<TableRow><TextView android:text="@string/POKE138"/></TableRow>
	<TableRow><TextView android:text="@string/POKE139"/></TableRow>
	<TableRow><TextView android:text="@string/POKE140"/></TableRow>
	<TableRow><TextView android:text="@string/POKE141"/></TableRow>
	<TableRow><TextView android:text="@string/POKE142"/></TableRow>
	<TableRow><TextView android:text="@string/POKE143"/></TableRow>
	<TableRow><TextView android:text="@string/POKE144"/></TableRow>
	<TableRow><TextView android:text="@string/POKE145"/></TableRow>
	<TableRow><TextView android:text="@string/POKE146"/></TableRow>
	<TableRow><TextView android:text="@string/POKE147"/></TableRow>
	<TableRow><TextView android:text="@string/POKE148"/></TableRow>
	<TableRow><TextView android:text="@string/POKE149"/></TableRow>
	<TableRow><TextView android:text="@string/POKE150"/></TableRow>
	<TableRow><TextView android:text="@string/POKE151"/></TableRow>

</TableLayout>